# Parrot-Refactoring-Kata

./: .gitignore  README.md
Ada/: .gitignore  README.md  parrot-tests.adb  parrot-tests.ads  parrot.adb  parrot.ads  parrot.gpr  run_tests.adb
Bash/: README.md  run_tests.bat  run_tests.sh
Bash/test/: smoke.yaml
C/: Parrot.h  README.md
CSharp/: .gitignore  Parrot.cs  ParrotTest.cs  ParrotTypeEnum.cs  parrot.csproj  parrot.sln
CSharp/Parrot/: AfricanParrot.cs  EuropeanParrot.cs  NewParrot.cs  NorwegianBlueParrot.cs  NorwegianParrot.cs  Parrot.cs  Parrot.csproj  ParrotTypeEnum.cs
CSharp/Parrot.Tests/: Parrot.Tests.csproj  ParrotTest.cs
CSharp/Parrot.Tests/.vshistory/ParrotTest.cs/: 2024-05-28_18_49_58_629.cs  2024-05-28_19_17_39_941.cs  2024-05-28_19_19_19_509.cs  2024-05-28_19_19_57_490.cs  2024-05-28_19_20_17_208.cs  2024-05-28_19_22_43_611.cs  2024-05-28_19_23_15_438.cs  2024-05-28_19_27_41_889.cs  2024-05-28_19_30_54_000.cs  2024-05-28_19_35_54_814.cs  2024-05-28_19_36_17_957.cs  2024-05-28_19_40_30_229.cs  2024-05-28_19_40_52_987.cs  2024-05-28_19_42_35_225.cs  2024-05-28_19_43_52_685.cs  2024-05-28_19_44_19_849.cs
CSharp/Parrot/.vshistory/AfricanParrot.cs/: 2024-05-28_18_51_58_583.cs  2024-05-28_18_52_08_085.cs  2024-05-28_18_57_58_837.cs  2024-05-28_18_58_12_698.cs  2024-05-28_19_10_23_008.cs  2024-05-28_19_13_31_622.cs  2024-05-28_19_21_20_165.cs
CSharp/Parrot/.vshistory/EuropeanParrot.cs/: 2024-05-28_18_50_48_301.cs  2024-05-28_18_51_12_998.cs  2024-05-28_19_24_29_458.cs  2024-05-28_19_27_45_239.cs
CSharp/Parrot/.vshistory/NewParrot.cs/: 2024-05-28_18_59_45_254.cs  2024-05-28_19_00_05_578.cs  2024-05-28_19_08_17_648.cs
CSharp/Parrot/.vshistory/NorwegianParrot.cs/: 2024-05-28_19_29_38_450.cs  2024-05-28_19_34_31_532.cs
CSharp/Properties/: AssemblyInfo.cs
C_cmocka/: ParrotTest.c
Clojure/: .gitignore  README.md  project.clj
Clojure/parrot-refactoring/: project.clj
Clojure/test/parrot_refactoring/: core_test.clj
Crystal/: shard.yml
Crystal/spec/: parrot_spec.cr  spec_helper.cr
Crystal/src/: parrot.cr
Elixir/: .gitignore  README.md  mix.exs
Elixir/lib/: parrot.ex
Elixir/test/: parrot_test.exs
Go/: .gitignore  README.md  go.mod  parrot.go  parrot_test.go
Io/: README.md  package.json
Io/io/: Parrot.io
Io/tests/correctness/: ParrotTest.io
Java/: .gitignore  README.md  build.gradle  pom.xml  settings.gradle
JavaScript/: README.md  package-lock.json  package.json
JavaScript/src/: parrot.js
JavaScript/src/__tests__/: parrot.spec.js
Kotlin/: .gitignore  README.md  build.gradle  build.gradle.kts
Kotlin/gradle/wrapper/: gradle-wrapper.properties
LabVIEW/: .gitignore  LICENSE  Parrot.lvproj  Parrot.vipc  Readme.md
LabVIEW/Parrot/: Base Speed.vi  Compute Base Speed for Voltage.vi  Compute Base Speed.vi  Cry.vi  Get Cry.vi  Get Load Factor.vi  Get Speed.vi  Load Factor.vi  New.vi  Parrot Type.ctl  Parrot.lvclass  Speed.vi
LabVIEW/Test Parrot/: Test Cry Of African Parrot.vi  Test Cry Of European Parrot.vi  Test Cry Of Norwegian Blue Parrot High Voltage.vi  Test Cry Of Norwegian Blue Parrot No Voltage.vi  Test Parrot.lvclass  Test Speed Of African Parrot With No Coconuts.vi  Test Speed Of African Parrot With One Coconut.vi  Test Speed Of African Parrot With Two Coconuts.vi  Test Speed Of European Parrot.vi  Test Speed Of Norwegian Blue Parrot Nailed.vi  Test Speed Of Norwegian Blue Parrot Not Nailed High Voltage.vi  Test Speed Of Norwegian Blue Parrot Not Nailed.vi
LegacyJavaScript/: .gitignore  .jshintrc  .jslint.conf  README.md  package.json
LegacyJavaScript/src/: parrot.js
LegacyJavaScript/test/: parrot_test.js
Objective-C/Parrot/: Parrot.h  Parrot.m  ParrotTypeEnum.h
Objective-C/Parrot.xcodeproj/: project.pbxproj
Objective-C/ParrotTests/: ParrotTests.m
PHP/: .editorconfig  .gitignore  README.md  composer.json  ecs.php  phpunit.xml.dist
PHP/src/: Parrot.php  ParrotTypeEnum.php
PHP/tests/: ParrotTest.php
Pascal/: MATH.PAS  PARROT.PAS  PARROT_T.PAS  README.md  TPUNIT.PAS
Python/: .gitignore  Pipfile  README.md  african_parrot.py  european_parrot.py  norwegian_parrot.py  parrot.py  parrot_factory.py  requirements.txt  test_parrot.py
Ruby/: .gitignore  Gemfile  Rakefile
Ruby/lib/: parrot.rb
Ruby/spec/: parrot_spec.rb
Rust/: Cargo.toml
Rust/src/: lib.rs
Scala/: .gitignore  build.sbt
Scala/project/: plugins.sbt
Scheme/: README.md  assert.scm  parrot-test.scm  parrot.scm
Swift/: .gitignore  Package.swift
Swift/Parrot/: Parrot.swift  ParrotType.swift  ParrotTypeEnum.swift
Swift/Parrot.xcodeproj/: project.pbxproj
Swift/ParrotTests/: ParrotTests.swift
Swift/Sources/Parrot/: Parrot.swift
Swift/Tests/ParrotTests/: ParrotTests.swift
TypeScript/: .gitignore  package.json  tslint.json
TypeScript/jest/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
TypeScript/jest/src/: parrot.ts
TypeScript/jest/tests/: parrot.spec.ts
TypeScript/mocha-chai/: README.md  tsconfig.json
TypeScript/mocha-chai/test/: parrot.spec.ts
TypeScript/src/: parrot.ts
TypeScript/test/: parrot.spec.ts
Xslt/: README.md  build.xml  parrot.dtd  parrot.xsl  tst_parrot.xsl
c_catch2/: CMakeLists.txt  README.md
c_catch2/src/: CMakeLists.txt  Parrot.c  Parrot.h
c_catch2/test-catch2/: sample_catch.cpp
common-lisp/: README.md  parrot-refactoring-kata.asd
common-lisp/source/: package.lisp  parrot.lisp
common-lisp/tests/: package.lisp  tests.lisp
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/catch2/: CMakeLists.txt  Parrot.cpp  Parrot.h  parrot_catch.cpp
cpp/gtest/: CMakeLists.txt  Parrot.cpp  parrot_gtest.cpp
cpp/model/: CMakeLists.txt  Parrot.cpp  Parrot.h
cpp/src/: CMakeLists.txt  Parrot.cpp  Parrot.h
cpp/test/: CMakeLists.txt  ParrotTest.cpp
cpp/test-catch2/: CMakeLists.txt  parrot_catch.cpp  sample_catch.cpp
cpp/test-doctest/: CMakeLists.txt  main.cpp  sample_doctest.cpp
cpp/test-gtest/: CMakeLists.txt  parrot_gtest.cpp  sample_gtest.cpp
dart/: README.md  pubspec.yaml
dart/lib/: parrot.dart  parrot_type.dart
dart/test/: parrot_test.dart
(+23 files in other folders)
